<resources>
    <string name="app_name">ERE Games</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close the navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">My profile</string>
    <string name="action_cart">Go to cart</string>
    <string name="menu_home">ERE Games</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="menu_search">Search</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_microsoft">Microsoft Xbox</string>
    <string name="menu_sony">Sony Playstation</string>
    <string name="menu_nintendo">Nintendo Switch</string>
    <string name="menu_pc">PC </string>
    <string name="menu_login">Login/Logout</string>
    <string name="deal_5">Deal 5</string>
    <string name="deal_4">Deal 4</string>
    <string name="deal_3">Deal 3</string>
    <string name="deal_2">Deal 2</string>
    <string name="deal_1">Deal 1</string>
    <string name="price_1">Price 1</string>
    <string name="price_2">Price 2</string>
    <string name="price_3">Price 3</string>
    <string name="price_4">Price 4</string>
    <string name="price_5">Price 5</string>
    <string name="search_by_console">Platform</string>
    <string name="latest_releases">Latest Releases</string>
    <string name="search_games">Search Games</string>
    <string name="search">Search</string>
    <string name="deals_of_the_week">Deals of the Week</string>
    <string name="latest_1">Latest 1</string>
    <string name="latest_2">Latest 2</string>
    <string name="latest_3">Latest 3</string>
    <string name="latest_4">Latest 4</string>
    <string name="dealoldprice">dealoldprice</string>
    <string name="dealnewprice">dealnewprice</string>
    <string name="priceOld">$%1$s</string>
    <string name="priceNew">$%1$d</string>
    <string name="enterCredentials">Please enter your credentials</string>
    <string name="enterUserName">Enter your username</string>
    <string name="returnToRegisterMode">Return to Register Mode</string>
    <string name="enterPassword">Enter your password</string>
    <string name="retypePassword">Retype your password</string>
    <string name="login">Login</string>
    <string name="clickToRegister">Click to Register</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="anonymousLogin">Currently anonymously logged in</string>
    <string name="returnToLoginMode">Return to Login Mode</string>
    <string name="contactUsEmail">erecustomerhelp@eregames.com.au</string>
    <string name="contactUsPhone">Phone</string>
    <string name="contactUsPhoneNumber">+61 89258 7049 (Click to call)</string>
    <string name="contactUsTitle">Contact Us</string>
    <string name="contactUsEmailHeader">Email</string>
    <string name="game_box">Game box</string>
    <string name="cart_scroll">Scroll through your cart - click on item to delete from the cart. Payment options are located at the bottom of the Shopping cart</string>
    <string name="cart_price">Amount of cart comes to: $AUD</string>
    <string name="cart_pay">Pay with credit card</string>
    <string name="payment_page">This is the actual payment page</string>
    <string name="payment_card_number">Credit/Debit Card</string>
    <string name="payment_card_expiration">Expiration MM/YY</string>
    <string name="payment_card_cvv">CVV</string>
    <string name="payment_card_firstname">First Name</string>
    <string name="payment_card_lastname">Last Name</string>
    <string name="payment_address">Billing Address</string>
    <string name="payment_email">Email Address</string>
    <string name="payment_pay">Pay Now</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_rating">Product Rating</string>
    <string name="product_status">Product Status</string>
    <string name="product_file">Product File</string>
    <string name="product_price">Product Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="product_platform">Product Platform</string>
    <string name="product_image">Product Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_name">User name</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_address">Address</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>
    <string name="profile_save_profile">Save profile</string>
    <string name="profile_clear_profile">Clear profile</string>
    <string name="profile_test_profile">Test profile</string>
    <string name="contact_opening_hours">Opening Hours</string>
    <string name="contact_open_time">Mon-Fri 8am - 5pm</string>
    <string name="contact_open_time2">Sat-Sun 12pm - 4pm</string>
    <string name="contact_address">Address</string>
    <string name="contact_address2">300 Wellington Street,</string>
    <string name="contact_address3">Perth, WA 6000 Australia</string>
    <string name="product_scroll">Scroll the listView</string>
    <string name="detail_click">Click on game to view details</string>
    <string name="search_suggestion">Try searching for Forza, Ridge Racer or Mario....</string>
    <string name="search_placeholder">Search games</string>
    <string name="search_button">Search</string>
    <string name="playstation">PlayStation</string>
    <string name="xbox">Xbox</string>
    <string name="nintendo_switch">Nintendo Switch</string>
    <string name="pc">PC</string>
    <string name="game_image">Game image</string>
    <string name="login_anonymous">You are logged in anonymously</string>
    <string name="login_as">"You are currently logged in as %1$s"</string>
    <string name="cart_empty">You have no items in your cart!</string>
    <string name="cart_amount">The total amount to pay: $%1$s.00 (AUD)</string>
    <string name="please_pay">Please pay $%1$d.00 (AUD)</string>
    <string name="item_name">"Name: %1$s"</string>
    <string name="item_price">"Price: $%1$s.00 (AUD)"</string>
    <string name="amount">"$%1$d.00 (AUD)"</string>
    <string name="item_sku">"SKU No: %1$s"</string>
    <string name="item_description">"Game Description: %1$s"</string>
    <string name="item_order">Please order below</string>
    <string name="item_in_cart">Already in cart</string>
    <string name="item_esrb">"ESRB Rating: %1$s"</string>
    <string name="item_platform">"Platform: %1$s"</string>
    <string name="anonymous">Anonymous</string>
    <string name="email_not_sent">Email not set</string>
    <string name="please_login">This feature is only available for registered users - Please log in</string>
    <string name="profile_username">"Username: %1$s"</string>
    <string name="profile_email2">"Email: %1$s"</string>
    <string name="pay_now">Buy Now</string>
    <string name="directions_to_ere_games">Directions to ERE Games</string>
    <string name="get_location">Get Location</string>
    <string name="our_locations">Our Locations</string>
    <string name="find_the_closest_outlet_to_you">Find the closest outlet to you!</string>
    <string name="click_on_game_to_view_details">Click on game to view details</string>
    <string name="nintendoSearch">Nintendo</string>
    <string name="playstationSearch">Playstation</string>
    <string name="xboxSearch">Xbox</string>
    <string name="pcSearch">PC</string>
    <string name="enter_both">Please enter both Username and Password</string>
    <string name="authenticated">Login authenticated</string>
    <string name="not_authenticated">Login NOT authenticated - are you registered?</string>
    <string name="been_registered">You have been registered - click LOGIN</string>
    <string name="name_on_card">Name on card</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV/CVC</string>
    <string name="click_photo_to_update">(Click photo to update)</string>
</resources>