<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:text="@string/search_suggestion"
        android:layout_marginStart="10dp" />
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/searchFragmentEditText"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/search_placeholder"
            android:singleLine="true"
            android:padding="10dp"
            android:importantForAutofill="no"
            android:inputType="text" />
        <Button
            android:id="@+id/searchFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/search_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp">

        <CheckBox
            android:id="@+id/PSCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playstation" />
        <CheckBox
            android:id="@+id/XboxCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xbox" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <CheckBox
            android:id="@+id/SwitchCheckBox"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nintendo_switch" />
        <CheckBox
            android:id="@+id/PCCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pc" />
    </LinearLayout>
    <ListView
        android:layout_marginTop="20dp"
        android:id="@+id/searchProductListView"
        android:layout_width="match_parent"
        android:layout_height="386dp"
        android:drawSelectorOnTop="false" />
</LinearLayout>
