<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreditCardActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:attr/colorFocusedHighlight"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_page"
            android:id="@+id/creditCardToPay"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:layout_below="@+id/creditCardToPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/creditCardNumber"
            android:hint="@string/payment_card_number"
            android:singleLine="true"
            android:ems="16"
            android:inputType="number"
            android:maxLength="16"
            android:importantForAutofill="no" />

        <EditText
            android:layout_below="@id/creditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expirationDate"
            android:hint="@string/payment_card_expiration"
            android:singleLine="true"
            android:inputType="date"
            android:importantForAutofill="no"
            android:maxLength="5"/>

        <EditText
            android:layout_below="@+id/expirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ccvNumber"
            android:hint="@string/payment_card_cvv"
            android:singleLine="true"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLength="3"/>

        <EditText
            android:layout_below="@+id/ccvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentFname"
            android:singleLine="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/payment_card_firstname" />

        <EditText
            android:layout_below="@+id/paymentFname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentLname"
            android:singleLine="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/payment_card_lastname" />

        <EditText
            android:layout_below="@id/paymentLname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentAddress"
            android:singleLine="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/payment_address" />

        <EditText
            android:layout_below="@id/paymentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentEmail"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:hint="@string/payment_email" />

        <Button
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payNow"
            android:text="@string/payment_pay"
            android:layout_below="@+id/paymentEmail"/>
    </RelativeLayout>
</LinearLayout>